add git-info tool [CE-164]
