# src/orcidlink/routers/root.py
@@ -1,5 +1,11 @@
 from fastapi import APIRouter
-from orcidlink.lib.config import Config, config, get_service_manifest
+from orcidlink.lib.config import (
+    Config,
+    GitInfo,
+    config,
+    get_git_info,
+    get_service_manifest,
+)
 from orcidlink.lib.utils import epoch_time_millis
 from orcidlink.model import ServiceManifest
 from pydantic import BaseModel, Field
@@ -41,6 +47,7 @@ async def get_status():
 class InfoResponse(BaseModel):
     service_manifest: ServiceManifest = Field(alias="service-manifest")
     config: Config = Field(...)
+    git_info: GitInfo = Field(alias="git-info")
 
 
 @router.get("/info", response_model=InfoResponse, tags=["misc"])
@@ -57,9 +64,14 @@ async def get_info():
     config_copy.orcid.clientSecret = "REDACTED"
     config_copy.mongo.username = "REDACTED"
     config_copy.mongo.password = "REDACTED"
+    git_info = get_git_info()
     # NB we can mix dict and model here.
     return InfoResponse.parse_obj(
-        {"service-manifest": service_manifest, "config": config_copy}
+        {
+            "service-manifest": service_manifest,
+            "config": config_copy,
+            "git-info": git_info,
+        }
     )
 
 
